<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="address_not_found">Address not found. </string>
    <string name="view_map">View Map</string>
    <string name="both_email_and_phone_cannot_be_blank">Both Email and Phone cannot be blank!</string>
    <string name="task_address_cannot_be_blank">Task Address cannot be blank!</string>
    <string name="task_name_cannot_be_blank">Task Name cannot be blank!</string>
    <string name="gmail_username">Gmail User Name</string>
    <string name="gmail_username_info">By default Location Notifier sends email notifications from \'Location Notifier Admin\' email account. If you prefer receiving email from your gmail account instead, please provide your gmail account credentials below.</string>
    <string name="save">Save</string>
    <string name="purchase">Purchase</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="at_gmail_com">gmail.com</string>
   <string name="main_menu">Main Menu</string>
    <string name="view_tasks">View Tasks</string>
    <string name="settings">Settings</string>
    <string name="add_task_at_time">Add Task @Time</string>
    <string name="add_task_at_address">Add Task @Address</string>
    <string name="tasks_title">Location Notifier Manager</string>
    <string name="hello">Hello World, ViewTasksAct!</string>
    <string name="app_name">GPS Tracker</string>
    <string name="disable_notifications">Disable Notifications?</string>
    <string name="enable_notifications">Disable Notifications?</string>
    <string name="notification_history">Notification History</string>
    <string name="delete_notifications">Delete Notifications</string>
    <string name="no_notifications">No Notifications</string>
    <string name="get_full_version">Get Pro Version</string>
    <string name="delete_confirm_message">Delete All Notifications?</string>
     
    
        <string name="tasks">Tasks</string>
        <string name="no_tasks">No Notification Tasks</string>
        <string name="remove_completed_tasks">Remove Tasks</string>
        <string name="add_task">Add Task</string>
        <string name="edit_task">Save</string>
        <string name="remove_task">Delete Task</string>
        <string name="cancel">Cancel</string>
        <string name="add_location_to_task">Add Location to Task</string>
		<string name="unsaved_changes_title">Unsaved Changes</string>
    	<string name="unsaved_changes_message">Would you like to add this task?</string>
    	<string name="confirm_cancel">Do you want to cancel?</string>
    	<string name="confirm_remove">Do you want to remove task?</string>
    	<string name="add_fail_msg">Error adding address. Make sure that the Address is correct and device has Network access.</string>
    	<string name="yes">Yes</string>
    	<string name="okay">Okay</string>
    	<string name="no">No</string>
    	<string name="discard">Discard</string>
    	<string name="maxout_msg">You have reached the maximum number of tasks allowed. Please purchase Pro version to add more tasks and get more features.</string>
		<string name="maxout_msg_pro">You have reached maximum number of tasks allowed. Please delete some tasks to add new.</string>    	
        
</resources>
