<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
			  xmlns:myapp="http://schemas.android.com/apk/res/com.swatiee"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">
	<Button
		android:id="@+id/view_list"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/view_tasks"/>

	<Button
		android:id="@+id/add_at_address"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/add_task_at_address"/>

	<Button
		android:id="@+id/settings"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/settings"/>
 		
	<Button
		android:id="@+id/settings1"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:onClick="onClickNewSettings"
 		android:text="settings1"/> 		
    
</LinearLayout>